--- a/RepositoryParser/RepositoryParser/View/DayActivityChartView.xaml
+++ b/RepositoryParser/RepositoryParser/View/DayActivityChartView.xaml
@@ -9,7 +9,7 @@
         mc:Ignorable="d"
         Title="DayActivityChartView" Height="600" Width="800"
         DataContext="{Binding Source={StaticResource Locator}, Path=DayActivity }"
-        Icon="../Assets/Ratings Filled-50.png"
+        Icon="../Assets/Icons/Ratings Filled-50.png"
         >
     <Grid>
         <Grid.ColumnDefinitions>
@@ -36,7 +36,7 @@
                 <StackPanel>
                     <chartingToolkit:Chart MinHeight="400" x:Name="Chart" Title="{x:Static resw:Resources.DayActivityChartChart}" Background="Beige" Margin="0,0,0,50">
                         <chartingToolkit:Chart.Series>
-                            <chartingToolkit:LineSeries x:Name="Series" 
+                            <chartingToolkit:LineSeries
                                     ItemsSource="{Binding KeyCollection, Mode=OneWay}"
                                     DependentValueBinding="{Binding Path=Value}"
                                     IndependentValueBinding="{Binding Path=Key}" 
