--- a/RepositoryParser/RepositoryParser/View/MonthActivityChart.xaml
+++ b/RepositoryParser/RepositoryParser/View/MonthActivityChart.xaml
@@ -9,7 +9,7 @@
         mc:Ignorable="d"
         Title="MonthActivityChart" Height="700" Width="900"
         DataContext="{Binding Source={StaticResource Locator}, Path=MonthActivity}"
-        Icon="../Assets/Ratings Filled-50.png"
+        Icon="../Assets/Icons/Ratings Filled-50.png"
         >
     <Grid>
         <Grid.ColumnDefinitions>
